<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="souza.hm.com.randomuser.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/search_layout"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerGender"
            android:entries="@array/gender_array"
            android:prompt="@string/prompt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8" />
        <Spinner
            android:id="@+id/spinnerNAT"
            android:entries="@array/nat_array"
            android:prompt="@string/prompt_nat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8" />
        <Spinner
            android:id="@+id/spinnerLEG"
            android:entries="@array/lego_array"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8" />


    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_layout"
        android:layout_marginTop="50dp"
        android:layout_weight="10"
        android:text="@string/btnN" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/name_photo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:background="@color/cardview_dark_background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_nametxt"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/user_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/locationtxt"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <LinearLayout
                    android:id="@+id/stats_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_state"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/user_ntxt"
                        android:textColor="#000000"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/pass_txt"
                        android:textColor="#000000"
                        android:textSize="14dp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.design.widget.CoordinatorLayout>
